syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/route_guide/routeguide";
option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package server;

message IdentifyPayload {
    string user_id = 1;
}

message IdentifyResponse {
    string status = 1;
}

service CDPIntegration {
    rpc Identify(IdentifyPayload) returns (IdentifyResponse);
}